name:                DevUtils-Redis
version:             0.1.0.0
synopsis:            Redis helpers
homepage:            https://github.com/adarqui/DevUtils-Redis
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.Redis
   System.DevUtils.Redis.Include
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, parsec ==3.1.5
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src
