name:                DevUtils-Redis
version:             0.1.0.0
synopsis:            Redis helpers
homepage:            https://github.com/adarqui/DevUtils-Redis
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.Redis
   System.DevUtils.Redis.Include
   System.DevUtils.Redis.JSON
   System.DevUtils.Redis.Types.String
   System.DevUtils.Redis.Types.ByteString
   System.DevUtils.Redis.Helpers.Info
   System.DevUtils.Redis.Helpers.Info.Include
   System.DevUtils.Redis.Helpers.Info.Default
   System.DevUtils.Redis.Helpers.Info.Marshall
   System.DevUtils.Redis.Helpers.Info.JSON
   System.DevUtils.Redis.Helpers.CommandStats
   System.DevUtils.Redis.Helpers.CommandStats.Include
   System.DevUtils.Redis.Helpers.CommandStats.Default
   System.DevUtils.Redis.Helpers.CommandStats.Parser
   System.DevUtils.Redis.Helpers.CommandStats.Marshall
   System.DevUtils.Redis.Helpers.CommandStats.JSON
   System.DevUtils.Redis.Helpers.CommandStats.Run
  build-depends:       base >= 4.6, HUnit >= 1.2.5.0, bytestring >= 0.10.0.0, parsec >= 3.1.3, hedis >= 0.6.5, containers >= 0.5.0.0, aeson >= 0.7.0.6, DevUtils-Base, DevUtils-Sys, DevUtils-Parser
  GHC-Options:         -Wall -rtsopts -XOverloadedStrings
  hs-source-dirs:      src
